Fixes a bug where lines on the feed would not be displayed in z-indexed cards

--- a/src/sass/components/activity-feed.sass
+++ b/src/sass/components/activity-feed.sass
@@ -41,7 +41,7 @@
       height: 100%
       width: 4px
       background: #d7e4ed
-      z-index: -1
+      z-index: 0
 
     img
       width: 44px
@@ -52,8 +52,10 @@
       background-position: center
       background-repeat: no-repeat
       background-size: cover
+      z-index: 1
 
   .pn-activity-text
+    text-align: left
     padding-top: 20px
     padding-bottom: 20px
     margin-top: 0
